--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ python-dateutil==2.8.2
 python-editor==1.0.4
 six==1.16.0
 SQLAlchemy==1.4.23
-Werkzeug==2.0.1
-WTForms==2.3.3
+Werkzeug
+WTForms
 numpy
 pylfsr
